--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,6 @@ jobs:
       - name: Install Nix
         uses: nixbuild/nix-quick-install-action@v30
 
-      - name: Restore Nix cache
-        uses: nix-community/cache-nix-action/restore@v6
-        with:
-          primary-key: nix-cache
-          nix: true
-
       - name: Configure SSH keys
         uses: shimataro/ssh-key-action@v2
         with:
@@ -26,13 +20,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Deploy configuration to servers
-        run: nix run .#rebuild-server
+      - name: Deploy configuration on sequoia
+        run: nix run .#rebuild-server -- sequoia $(cat modules/by-name/constants/endpoint.txt)
 
-      - name: Save Nix cache
-        uses: nix-community/cache-nix-action/save@v6
-        with:
-          primary-key: nix-cache
-          nix: true
-          gc-max-store-size: 2G
+      - name: Deploy configuration on pine
+        run: nix run .#rebuild-server -- pine $(cat modules/by-name/constants/proxy.txt)
 
