--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy configuration on sequoia
-        run: nix run .#rebuild-server -- sequoia $(cat modules/by-name/constants/endpoint.txt)
+        run: .github/rebuild-server sequoia $(cat modules/by-name/constants/endpoint.txt)
 
       - name: Deploy configuration on pine
-        run: nix run .#rebuild-server -- pine $(cat modules/by-name/constants/proxy.txt)
+        run: .github/rebuild-server pine $(cat modules/by-name/constants/proxy.txt)
 
