--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install `nixos-rebuild`
-        run: nix-env -iA nixpkgs.nixos-rebuild
+        run: nix-env -iA nixos-rebuild -f '<nixpkgs>'
 
       - name: Deploy configuration
         run: .github/rebuild-server ${{ matrix.host }} $(cat modules/by-name/constants/${{ matrix.host }}.txt)
