--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Install Nix
         uses: nixbuild/nix-quick-install-action@v30
 
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+
       - name: Configure SSH keys
         uses: shimataro/ssh-key-action@v2
         with:
